# RacingSimulator

./: CMakeLists.txt  air_race.cpp  air_race.h  air_vehicle.cpp  air_vehicle.h  all_terrain_boots.cpp  all_terrain_boots.h  broom.cpp  broom.h  camel.cpp  camel.h  centaur.cpp  centaur.h  eagle.cpp  eagle.h  land_race.cpp  land_race.h  land_vehicle.cpp  land_vehicle.h  magic_carpet.cpp  magic_carpet.h  main.cpp  race.cpp  race.h  speedboat_camel.cpp  speedboat_camel.h  vehicle.cpp  vehicle.h
